--- a/app/src/app/lab-members/component/lab-member/lab-member.component.html
+++ b/app/src/app/lab-members/component/lab-member/lab-member.component.html
@@ -2,7 +2,7 @@
     <h1 class="ta-center">{{item.title}}</h1>
 </div>
 <div class="grid m-y-xl">
-    <div class="col-10 flex jc-center fw-wrap">
+    <div class="col-10 col-s-12 flex jc-center fw-wrap">
         <div class="col-12 members-image" [ngStyle]="{'background-image': 'url('+ item.image +')'}"></div>
         <div class="col-12">
             <scully-content></scully-content>
