style(): style hotfix

--- a/app/src/app/components/blocks/news-block/news-block.component.html
+++ b/app/src/app/components/blocks/news-block/news-block.component.html
@@ -1,10 +1,10 @@
-<section class="m-y-xl images-block">
+<section class="m-y-xl p-y-l">
     <div class="grid jc-around">
         <div class="col-12 ta-center" *ngIf="data.title || data.subTitle">
             <h1 *ngIf="data.title" class="section-title">{{data.title}}</h1>
             <h4 *ngIf="data.subTitle" class="info m-t-m m-b-l">{{data.subTitle}}</h4>
         </div>
-        <div class="col-5 col-s-12 ta-center flex jc-center" *ngFor="let item of news$ | async">
+        <div class="col-4 col-s-12 ta-center flex jc-center" *ngFor="let item of news$ | async">
             <a [routerLink]="item.route" class="card">
                 <div class="img-wrapper" [ngStyle]="{'background-image': 'url('+ item.image +')'}"></div>
                 <div class="news-info ta-left">
