style(): mobile adjsutments on multiple components

--- a/app/src/app/lab-members/component/lab-member/lab-member.component.html
+++ b/app/src/app/lab-members/component/lab-member/lab-member.component.html
@@ -1,7 +1,7 @@
 <div class="main flex jc-center ai-center m-t-m">
     <h1 class="ta-center">{{item.title}}</h1>
 </div>
-<div class="grid m-y-xl">
+<div class="grid m-t-xl">
     <div class="col-10 col-s-12 flex jc-center fw-wrap">
         <div class="col-12 members-image" [ngStyle]="{'background-image': 'url('+ item.image +')'}"></div>
         <div class="col-12">
