--- a/app/src/app/news/component/news-list/news-list.component.html
+++ b/app/src/app/news/component/news-list/news-list.component.html
@@ -1,5 +1,5 @@
 <section>
-    <div class="grid m-t-l">
+    <div class="grid">
         <div class="col-12">
             <div class="flex jc-center ai-center m-t-m">
                 <h1>{{item.title}}</h1>
