--- a/app/src/app/lab-members/component/lab-member/lab-member.component.scss
+++ b/app/src/app/lab-members/component/lab-member/lab-member.component.scss
@@ -19,6 +19,7 @@
 
 .button-wrapper {
   margin-top: 40px;
+  margin-bottom: 40px;
 }
 
 .members-btn {
@@ -46,5 +47,9 @@
 @media (max-width: 900px)  {
   h1 {
     font-size: 30px;
+  }
+  .members-btn {
+    font-size: 18px;
+    padding: 5px 10px;
   }
 }
