--- a/app/src/app/news/component/news-list/news-list.component.scss
+++ b/app/src/app/news/component/news-list/news-list.component.scss
@@ -1,4 +1,6 @@
-
+section {
+  margin-top: 65px;
+}
 
 .news-author {
   font-size: 24px;
@@ -44,6 +46,23 @@
 
 
 .news-button-wrapper {
-  margin-top: auto;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
 
+
+/* Mobile Styles
+ *============================================================================*/
+@media (max-width: 900px)  {
+  h1 {
+    font-size: 30px;
+  }
+  .wrapper {
+    padding: 0;
+    margin-top: 20px;
+  }
+  .news-btn {
+    font-size: 18px;
+    padding: 5px 10px;
+  }
+}
