--- a/app/src/app/researches/component/research/research.component.html
+++ b/app/src/app/researches/component/research/research.component.html
@@ -1,5 +1,5 @@
 <section>
-    <div class="grid m-t-xl">
+    <div class="grid">
         <div class="col-12">
             <div class="col-12 ta-center">
                 <h1>{{item.title}}</h1>
