--- a/app/src/app/researches/component/research/research.component.scss
+++ b/app/src/app/researches/component/research/research.component.scss
@@ -1,3 +1,7 @@
+section {
+  margin-top: 65px;
+}
+
 .research-author {
   font-size: 24px;
   color: #a2a2a2;
@@ -20,6 +24,7 @@
 
 .button-wrapper {
   margin-top: 40px;
+  margin-bottom: 40px;
 }
 
 .research-btn {
@@ -47,5 +52,13 @@
 @media (max-width: 900px)  {
   h1 {
     font-size: 30px;
+  }
+  .wrapper {
+    padding: 0;
+    margin-top: 20px;
+  }
+  .research-btn {
+    font-size: 18px;
+    padding: 5px 10px;
   }
 }
